--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "install": "npm install",
-    "start": "node-red"
+    "start": "node index.js"
   },
   "dependencies": {
     "node-red": "3.1.3",
